# web-dev-template-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  compose.override.yml  compose.swarm.yml  compose.traefik-swarm.yml  compose.yml  deployment-zh.md  deployment.md  development-zh.md  development.md  package.json  pnpm-lock.yaml  release-notes.md  代码审查.md
.agents/skills/web-dev-template/: SKILL.md
.agents/skills/web-dev-template/references/: backend-patterns.md  frontend-patterns.md  testing-and-config.md
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: _deploy.yml  add-to-project.yml  deploy-production.yml  deploy-staging.yml  detect-conflicts.yml  issue-manager.yml  labeler.yml  latest-changes.yml  playwright.yml  pre-commit.yml  smokeshow.yml  test-backend.yml  test-docker-compose.yml  test-frontend.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c6e1c955af4_init.py  8a7c03f98c62_add_invoice_status_constraints_and_indexes.py
backend/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: customers.py  dashboard.py  invoices.py  login.py  private.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  base.py  customer.py  invoice.py  user.py
backend/app/schemas/: base.py  customers.py  dashboard.py  invoices.py  users.py
backend/app/services/: customer.py  dashboard.py  invoice.py  user.py
backend/app/utils/: utils.py
backend/tests/: conftest.py  test_config.py  test_initial_data.py  test_runtime_paths.py  test_utils.py
backend/tests/api/: test_middleware_and_deps.py
backend/tests/api/routes/: test_customers.py  test_dashboard.py  test_invoices.py  test_invoices_extra.py  test_login.py  test_login_extra.py  test_private.py  test_users.py  test_utils.py
backend/tests/services/: test_customer.py  test_customer_crud.py  test_dashboard.py  test_invoice.py  test_invoice_crud.py  test_user.py
backend/tests/utils/: user.py
frontend/: Dockerfile  Dockerfile.playwright  README.md  middleware.ts  next.config.ts  package.json  playwright.config.js  pnpm-lock.yaml  proxy.ts  tsconfig.json
frontend/app/: layout.tsx
frontend/app/dashboard/customers/: error.tsx  page.tsx
frontend/app/dashboard/invoices/: error.tsx  page.tsx
frontend/app/lib/: actions.ts  api.ts  auth.ts  data.ts  definitions.ts  utils.ts
frontend/app/login/: page.tsx
frontend/app/logout/: route.ts
frontend/app/ui/: acme-logo.tsx  login-form.tsx  search.tsx
frontend/app/ui/customers/: table.tsx
frontend/app/ui/dashboard/: cards.tsx  latest-invoices.tsx  nav-links.tsx  revenue-chart.tsx  sidenav.tsx
frontend/app/ui/invoices/: breadcrumbs.tsx  buttons.tsx  create-form.tsx  edit-form.tsx  invoice-form-fields.tsx  invoices-content.tsx  pagination.tsx  table.tsx
frontend/tests/: auth.spec.ts  customers.spec.ts  helpers.ts  invoices.spec.ts
